chrome gallery photo gap fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ a:hover {
 
 img {
   max-width: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .m-0 {
@@ -308,6 +308,10 @@ img {
   max-width: 300px;
 }
 
+.info__card__img {
+  width: 400px;
+}
+
 .info__card__content {
   text-align: center;
 }
@@ -358,7 +362,7 @@ img {
 
 .news__resource__link:hover .news__resource__title,
 .news__blog__link:hover .news__blog__title {
-  box-shadow: 1px 1px 5px #27ad6c;
+  text-shadow: 2px 2px 10px #27ad6c;
 }
 
 .news__resource__item img {
@@ -442,6 +446,13 @@ img {
   display: grid;
   grid-template-columns: auto auto auto;
   margin-bottom: 0;
+}
+
+.gallery__item {
+  width: 100%;
+  min-width: 100%;
+  height: 430px;
+  max-height: 430px;
 }
 
 .gallery__item:hover {
@@ -554,6 +565,6 @@ img {
   color: #ffffff;
 }
 
-.footer__nav__item:hover .nav__link{
+.footer__nav__item:hover .nav__link {
   color: #70c919;
 }
